--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="./assets/images/TestArmyNoBG3.png" alt="Logo" height="60">
+      <img src="./assets/images/TestArmyNoBG3.png" style="margin-left: 60px;" alt="Logo" height="60">
     </a>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
