--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
+        <div class="card" style="height: 380px;">
           <img src="./assets/images/greencontextlogo.png" class="card-img-top" alt="Contextual Tests">
           <div class="card-body">
             <h5 class="card-title">Contextual Tests</h5>
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card">
+        <div class="card" style="height: 380px;">
           <img src="./assets/images/greencloud.png" class="card-img-top" alt="Trained for Salesforce">
           <div class="card-body">
             <h5 class="card-title">Trained for Salesforce</h5>
