--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <a class="nav-link" href="./thesis.html">Thesis</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Value</a>
+          <a class="nav-link" href="./value.html">Value</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Team</a>
+          <a class="nav-link" href="./team.html">Team</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="book-time-button">Join the waitlist</a>
