--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h2>TestArmy makes it possible to balance cost, speed and software quality.</h2>
     <div class="row">
       <div class="col-md-4">
-        <div class="card">
+        <div class="card" style="height: 380px;">
           <img src="./assets/images/greengroup.png" class="card-img-top" alt="One click QA team">
           <div class="card-body">
             <h5 class="card-title">One click QA team</h5>
