--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   </section>
   <div id="message-card"></div>
   <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-top-sm u-valign-top-xs u-container-layout-2" id="waitlist-domain">
-    <h3 class="centered-heading">Sign up for our closed Alpha</h3>
+    <h3 class="centered-heading">Sign up for our Newsletter!</h3>
     <form id="signup-form" class="reduced-width-form">
       <div class="input-group">
         <div class="input-group-prepend">
