--- a/team.html
+++ b/team.html
@@ -54,29 +54,29 @@
       <div class="row">
         <!-- Feature 1 -->
         <div class="col-md-4">
-          <div class="card">
+          <div class="card" style="height: 920px;">
         <center><img src="./assets/images/Robinpiv.jpeg" style="border-radius: 50%;height: 250px;width: 250px;padding: 20px;" alt="One click QA team" class="img-fluid mb-3"></center>
-        <h4><b>ROBIN GUPTA</b></h4>
+        <h4><b>Robin Gupta</b></h4>
         <h5 style="color: #f4d349;"><b>Co-Founder and CEO</b></h5><br>
-        <p>Robin is a versatile Engineering leader with more than 15 years of experience in software delivery across startups, scale-ups and enterprises. Beyond work, he mentors at ADPList and Plato, contributes to open-source projects like <a href="https://www.selenium.dev/">Selenium</a>, created <a href="https://testzeus.com/">TestZeus</a> (the only open-source test automation framework for Salesforce), and has authored <a href="https://amzn.in/d/b2F84yJ">books</a>  and <a href="https://testautomationu.applitools.com/salesforce-testzeus-tutorial/">courses</a>  on the topic of Software testing and automation. He is also recognized as a speaker at international events such as Dreamforce (by <a href="https://www.salesforce.com/">Salesforce</a>) and Selenium Conference. Robin is the Chief Executive Officer at TestArmy, and is fighting against the battle for bad quality software.</p>
+        <p style="padding: 12px; font-size: 18px;">Robin is a versatile Engineering leader with more than 15 years of experience in software delivery across startups, scale-ups and enterprises. Beyond work, he mentors at ADPList and Plato, contributes to open-source projects like <a href="https://www.selenium.dev/">Selenium</a>, created <a href="https://testzeus.com/">TestZeus</a> (the only open-source test automation framework for Salesforce), and has authored <a href="https://amzn.in/d/b2F84yJ">books</a>  and <a href="https://testautomationu.applitools.com/salesforce-testzeus-tutorial/">courses</a>  on the topic of Software testing and automation. He is also recognized as a speaker at international events such as Dreamforce (by <a href="https://www.salesforce.com/">Salesforce</a>) and Selenium Conference. Robin is the Chief Executive Officer at TestArmy, and is fighting against the battle for bad quality software.</p>
           </div>
         </div>
         <!-- Feature 2 -->
         <div class="col-md-4">
-          <div class="card">
+          <div class="card" style="height: 920px;">
             <center><img src="./assets/images/shriyansh_photo.jpg" style="border-radius: 50%;height: 250px;width: 250px;padding: 20px;object-fit: cover;object-position: 25% 25%; " alt="Contextual Tests" class="img-fluid mb-3"></center>
-            <h4><b>SHRIYANSH AGNIHOTRI</b></h4>
+            <h4><b>Shrityansh Aghinotri</b></h4>
             <h5 style="color: #f4d349;"><b>Co-Founder and CTO</b></h5><br>
-            <p>  Shriyansh is an accomplished technology leader with over 13 years of experience in distributed software development, scalable architecture design, and big data systems. As a co-founder and CTO, he excels in building products from the ground up, leading teams, and driving technical innovation. Shriyansh has successfully developed large-scale systems capable of handling petabytes of data, from proof of concept to full deployment. His expertise spans distributed systems, AI/Gen AI, and microservices,  from organizations such as <a href="https://www.amagi.com/">Amagi</a> and <a href="https://www.nutanix.com/">Nutanix</a>. Beyond work, he is a true coffee aficionado and hardware geek.</p>
+            <p style="padding: 12px;font-size: 18px;">  Shriyansh is an accomplished technology leader with over 13 years of experience in distributed software development, scalable architecture design, and big data systems. As a co-founder and CTO, he excels in building products from the ground up, leading teams, and driving technical innovation. Shriyansh has successfully developed large-scale systems capable of handling petabytes of data, from proof of concept to full deployment. His expertise spans distributed systems, AI/Gen AI, and microservices,  from organizations such as <a href="https://www.amagi.com/">Amagi</a> and <a href="https://www.nutanix.com/">Nutanix</a>. Beyond work, he is a true coffee aficionado and hardware geek.</p>
           </div>
         </div>
         <!-- Feature 3 -->
         <div class="col-md-4">
-          <div class="card">
+          <div class="card" style="height: 920px;">
             <center><img src="./assets/images/eshanpic.jpeg" style="border-radius: 50%;height: 250px;width: 250px;padding: 20px;" alt="Trained for Salesforce" class="img-fluid mb-3"></center>
-            <h4><b>ESHAN SINGH</b></h4>
+            <h4><b>Eshan Singh</b></h4>
             <h5 style="color: #f4d349;"><b>Founding Engineer</b></h5><br>
-            <p> Eshan Singh, as the Founding Engineer at TestArmy, is a versatile developer with a knack for mastering various programming languages and frameworks. He thrives on building innovative solutions, whether it's full-stack development, API and microservices, or cloud technologies. His passion for cybersecurity R&D positions him as a digital detective, always ready to push the boundaries of tech. Eshan also trains others in <a href="https://www.linkedin.com/posts/eshan-singh04_cybersecurity-techkriti-iitkanpur-activity-7234218543502794752-EK0w/">Cyber Security and Web Development</a>, making him a well-rounded leader in the tech space. He is also the organiser at <a href="https://defcon9111.org">DEF CON Delhi</a>, and always down for a nerdy discussion around cybersecurity.</p>
+            <p style="padding: 12px;font-size: 18px;"> Eshan Singh, as the Founding Engineer at TestArmy, is a versatile developer with a knack for mastering various programming languages and frameworks. He thrives on building innovative solutions, whether it's full-stack development, API and microservices, or cloud technologies. His passion for cybersecurity R&D positions him as a digital detective, always ready to push the boundaries of tech. Eshan also trains others in <a href="https://www.linkedin.com/posts/eshan-singh04_cybersecurity-techkriti-iitkanpur-activity-7234218543502794752-EK0w/">Cyber Security and Web Development</a>, making him a well-rounded leader in the tech space. He is also the organiser at <a href="https://defcon9111.org">DEF CON Delhi</a>, and always down for a nerdy discussion around cybersecurity.</p>
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
 
   <div id="message-card"></div>
   <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-top-sm u-valign-top-xs u-container-layout-2" id="waitlist-domain">
-    <h3 class="centered-heading">Sign up for our closed Alpha</h3>
+    <h3 class="centered-heading">Sign up for our Newsletter!</h3>
     <form id="signup-form" class="reduced-width-form">
       <div class="input-group">
         <div class="input-group-prepend">
