--- a/thesis.html
+++ b/thesis.html
@@ -34,7 +34,7 @@
           <a class="nav-link" href="./value.html">Value</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./thesis.html">Team</a>
+          <a class="nav-link" href="./team.html">Team</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="book-time-button">Join the waitlist</a>
@@ -47,9 +47,10 @@
 
 
 <!-- New Section -->
-<section class="overlap-section">
+<br>
     <center><img src="./assets/images/idea.png" style="margin-bottom: 80px;" alt="idea" height="100"></center>
-  <div class="container">
+    <section class="overlap-section">
+  <div class="container" style="margin-top: 20px;">
     <h5><i>"Quality isn’t just about software testing—it’s a way of life.”</i><br><br>
 
         A few months ago, we asked ourselves a simple question:<br><br>
@@ -84,10 +85,10 @@
     <h5 style="text-align: right"><b>- Robin Gupta. (Co founder and CEO). </b></h5>
   </div>
 </section>
-
+<br>
   <div id="message-card"></div>
   <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-top-sm u-valign-top-xs u-container-layout-2" id="waitlist-domain">
-    <h3 class="centered-heading">Sign up for our closed Alpha</h3>
+    <h3 class="centered-heading">Sign up for our Newsletter!</h3>
     <form id="signup-form" class="reduced-width-form">
       <div class="input-group">
         <div class="input-group-prepend">
