--- a/value.html
+++ b/value.html
@@ -47,9 +47,10 @@
 
 
 <!-- New Section -->
-<section class="overlap-section">
+<br>
     <center><img src="./assets/images/armymedal.png" style="margin-bottom: 80px;" alt="idea" height="100"></center>
-  <div class="container">
+    <section class="overlap-section" >
+  <div class="container" style="margin-top: 20px;">
     <h5>1. <i>Customer First : </i><br>
         At TestArmy, our mission begins and ends with our customers. We are committed to understanding their needs, challenges, and goals. By placing customers at the forefront of everything we do, we ensure that our solutions are tailored to provide the highest value. We listen actively, respond swiftly, and continuously seek feedback to enhance our offerings. Our dedication to exceptional customer service means that we go the extra mile to deliver quality and exceed expectations, building lasting relationships based on trust and mutual <b>success.</b><br><br>
         
@@ -63,7 +64,7 @@
 
   <div id="message-card"></div>
   <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-top-sm u-valign-top-xs u-container-layout-2" id="waitlist-domain">
-    <h3 class="centered-heading">Sign up for our closed Alpha</h3>
+    <h3 class="centered-heading">Sign up for our Newsletter!</h3>
     <form id="signup-form" class="reduced-width-form">
       <div class="input-group">
         <div class="input-group-prepend">
