--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="247x247" href="./assets/images/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./indexstyle.css">
+  <link rel="stylesheet" href="./teamstyle.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
