--- a/value.html
+++ b/value.html
@@ -37,7 +37,7 @@
           <a class="nav-link" href="./team.html">Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="book-time-button">Join the waitlist</a>
+          <a class="nav-link" href="./waitlist.html">Join the waitlist</a>
         </li>
       </ul>
     </div>
