--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
   </div>
 </section>
 
+<center><img src="./assets/images/graphic-qa-1.png"></center>
 <!-- FAQ Section -->
 <section class="faq-section">
     <div class="container">
