--- a/waitlist.html
+++ b/waitlist.html
@@ -53,7 +53,7 @@
 <!-- New Section -->
 <section class="overlap-section">
     <div class="container">
-      <h2>Join TestArmy to make it possible to balance cost, speed, and software quality.</h2>
+      <h2>Join the waitlist to make it possible to balance cost, speed, and software quality.</h2>
       <form id="signup-form" class="reduced-width-form">
         <div class="mb-3">
           <label for="full-name" class="form-label">Full Name</label>
@@ -78,23 +78,41 @@
   <footer class="footer bg-gray">
     <div class="container">
       <div class="row align-items-center">
-        <!-- Left Text -->
+        <!-- Left Section: Triangle T Logo -->
         <div class="col-md-4 text-left">
-          <p style="color: white;">Made with <span class="text-danger">❤️</span> in <img src="./assets/images/206606.png" alt="India Flag" class="flag-image"></p>
-        </div>
-        <!-- Center Image -->
-        <div class="col-md-4 text-center">
           <img src="./assets/images/favicon-19.png" alt="Footer Image" class="footer-image">
         </div>
-        <!-- Right Section -->
-        <div class="col-md-4 text-right d-flex align-items-center justify-content-end">
-          <p class="mb-0 me-3" style="color: white;">&copy; 2024</p>
-          <a href="https://www.linkedin.com/company/test-army-ai" target="_blank" class="social-icon me-2">
-            <img src="./assets/images/icons8-linkedin-48.png" alt="LinkedIn" class="social-logo">
-          </a>
-          <a href="https://x.com/TestarmyAI" target="_blank" class="social-icon">
-            <img src="./assets/images/icons8-twitter-48.png" alt="Twitter" class="social-logo">
-          </a>
+
+        <!-- Center Section: Newsletter Signup -->
+        <div class="col-md-4 text-center">
+          <h3 class="centered-heading">Sign up for our Newsletter!</h3>
+          <form id="signup-form" class="reduced-width-form">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Email</span>
+              </div>
+              <input type="email" id="email" name="email" class="form-control" placeholder="Enter your Business email" required>
+              <div class="input-group-append">
+                <button class="btn btn-dark" type="submit">Count me in!</button>
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <!-- Right Section: Made with Love in India, Copyright, and Social Icons -->
+        <div class="col-md-4 text-right d-flex flex-column align-items-end">
+          <p style="color: white;">Made with <span class="text-danger">❤️</span> in 
+            <img src="./assets/images/206606.png" alt="India Flag" class="flag-image">
+          </p>
+          <div class="d-flex align-items-center">
+            <p class="mb-0 me-3" style="color: white;">&copy; 2024</p>
+            <a href="https://www.linkedin.com/company/test-army-ai" target="_blank" class="social-icon me-2">
+              <img src="./assets/images/icons8-linkedin-48.png" alt="LinkedIn" class="social-logo">
+            </a>
+            <a href="https://x.com/TestarmyAI" target="_blank" class="social-icon">
+              <img src="./assets/images/icons8-twitter-48.png" alt="Twitter" class="social-logo">
+            </a>
+          </div>
         </div>
       </div>
     </div>
