--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="col-md-4">
         <div class="card" style="height: 380px;">
           <img src="./assets/images/greengroup.png" class="card-img-top" alt="One click QA team">
-          <div class="card-body">
+          <div class="card-body" style="text-align: center;">
             <h5 class="card-title">One click QA team</h5>
             <p class="card-text">Leverage our multi-agent systems to mimic real-world human testing, ensuring your software stands up to real-world scenarios.</p>
           </div>
@@ -76,7 +76,7 @@
       <div class="col-md-4">
         <div class="card" style="height: 380px;">
           <img src="./assets/images/greencontextlogo.png" class="card-img-top" alt="Contextual Tests">
-          <div class="card-body">
+          <div class="card-body" style="text-align: center;">
             <h5 class="card-title">Contextual Tests</h5>
             <p class="card-text">We build meaningful tests based on your requirements, and test data.</p>
           </div>
@@ -85,7 +85,7 @@
       <div class="col-md-4">
         <div class="card" style="height: 380px;">
           <img src="./assets/images/greencloud.png" class="card-img-top" alt="Trained for Salesforce">
-          <div class="card-body">
+          <div class="card-body" style="text-align: center;">
             <h5 class="card-title">Trained for Salesforce</h5>
             <p class="card-text">Our Browser Agent is fine-tuned for Salesforce, so that your tests run, even if the UI changes.</p>
           </div>
@@ -95,7 +95,9 @@
   </div>
 </section>
 
-<center><img src="./assets/images/graphic-qa-1.png"></center>
+<br>
+<center><img style="height: 600px;" src="./assets/images/graphic-qa-1.png"></center>
+<br>
 <!-- FAQ Section -->
 <section class="faq-section">
     <div class="container">
@@ -189,46 +191,53 @@
     </div>
   </section>
   <div id="message-card"></div>
-  <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-top-sm u-valign-top-xs u-container-layout-2" id="waitlist-domain">
-    <h3 class="centered-heading">Sign up for our Newsletter!</h3>
-    <form id="signup-form" class="reduced-width-form">
-      <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">Email</span>
-        </div>
-        <input type="email" id="email" name="email" class="form-control" placeholder="Enter your Business email" required>
-        <div class="input-group-append">
-          <button class="btn btn-dark" type="submit">Count me in!</button>
-        </div>
-      </div>
-    </form>
-  </div>
+
   <br>
   
   <footer class="footer bg-gray">
     <div class="container">
       <div class="row align-items-center">
-        <!-- Left Text -->
+        <!-- Left Section: Triangle T Logo -->
         <div class="col-md-4 text-left">
-          <p style="color: white;">Made with <span class="text-danger">❤️</span> in <img src="./assets/images/206606.png" alt="India Flag" class="flag-image"></p>
-        </div>
-        <!-- Center Image -->
-        <div class="col-md-4 text-center">
           <img src="./assets/images/favicon-19.png" alt="Footer Image" class="footer-image">
         </div>
-        <!-- Right Section -->
-        <div class="col-md-4 text-right d-flex align-items-center justify-content-end">
-          <p class="mb-0 me-3" style="color: white;">&copy; 2024</p>
-          <a href="https://www.linkedin.com/company/test-army-ai" target="_blank" class="social-icon me-2">
-            <img src="./assets/images/icons8-linkedin-48.png" alt="LinkedIn" class="social-logo">
-          </a>
-          <a href="https://x.com/TestarmyAI" target="_blank" class="social-icon">
-            <img src="./assets/images/icons8-twitter-48.png" alt="Twitter" class="social-logo">
-          </a>
+
+        <!-- Center Section: Newsletter Signup -->
+        <div class="col-md-4 text-center">
+          <h3 class="centered-heading">Sign up for our Newsletter!</h3>
+          <form id="signup-form" class="reduced-width-form">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">Email</span>
+              </div>
+              <input type="email" id="email" name="email" class="form-control" placeholder="Enter your Business email" required>
+              <div class="input-group-append">
+                <button class="btn btn-dark" type="submit">Count me in!</button>
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <!-- Right Section: Made with Love in India, Copyright, and Social Icons -->
+        <div class="col-md-4 text-right d-flex flex-column align-items-end">
+          <p style="color: white;">Made with <span class="text-danger">❤️</span> in 
+            <img src="./assets/images/206606.png" alt="India Flag" class="flag-image">
+          </p>
+          <div class="d-flex align-items-center">
+            <p class="mb-0 me-3" style="color: white;">&copy; 2024</p>
+            <a href="https://www.linkedin.com/company/test-army-ai" target="_blank" class="social-icon me-2">
+              <img src="./assets/images/icons8-linkedin-48.png" alt="LinkedIn" class="social-logo">
+            </a>
+            <a href="https://x.com/TestarmyAI" target="_blank" class="social-icon">
+              <img src="./assets/images/icons8-twitter-48.png" alt="Twitter" class="social-logo">
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </footer>
+
+  
   
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
